@@ -11,8 +11,7 @@ import de.uka.ilkd.key.java.expression.literal.NullLiteral;
 import de.uka.ilkd.key.java.reference.ExecutionContext;
 import de.uka.ilkd.key.java.reference.FieldReference;
 import de.uka.ilkd.key.java.reference.ReferencePrefix;
-import de.uka.ilkd.key.logic.Namespace;
-import de.uka.ilkd.key.logic.Term;
+import de.uka.ilkd.key.logic.JTerm;
 import de.uka.ilkd.key.logic.TermServices;
 import de.uka.ilkd.key.logic.op.*;
 import de.uka.ilkd.key.proof.init.JavaProfile;
@@ -20,7 +19,9 @@ import de.uka.ilkd.key.proof.io.ProofSaver;
 
 import org.key_project.logic.Name;
 import org.key_project.logic.Named;
+import org.key_project.logic.Namespace;
 import org.key_project.logic.op.Function;
+import org.key_project.logic.op.Operator;
 import org.key_project.logic.sort.Sort;
 import org.key_project.util.ExtList;
 import org.key_project.util.collection.ImmutableArray;
@@ -57,30 +58,30 @@ public final class HeapLDT extends LDT {
     // select/store
     private final SortDependingFunction select;
     private final SortDependingFunction finalFunction;
-    private final JFunction store;
-    private final JFunction create;
-    private final JFunction anon;
+    private final Function store;
+    private final Function create;
+    private final Function anon;
     private final Function memset;
 
     // fields
-    private final JFunction arr;
-    private final JFunction created;
-    private final JFunction initialized;
+    private final Function arr;
+    private final Function created;
+    private final Function initialized;
     private final SortDependingFunction classPrepared;
     private final SortDependingFunction classInitialized;
     private final SortDependingFunction classInitializationInProgress;
     private final SortDependingFunction classErroneous;
 
     // length
-    private final JFunction length;
+    private final Function length;
 
     // null
-    private final JFunction nullFunc;
+    private final Function nullFunc;
 
     // predicates
-    private final JFunction wellFormed;
-    private final JFunction acc;
-    private final JFunction reach;
+    private final Function wellFormed;
+    private final Function acc;
+    private final Function reach;
     private final Function prec;
 
     // heap pv
@@ -94,8 +95,9 @@ public final class HeapLDT extends LDT {
 
     public HeapLDT(TermServices services) {
         super(NAME, services);
-        final Namespace<Sort> sorts = services.getNamespaces().sorts();
-        final Namespace<IProgramVariable> progVars = services.getNamespaces().programVariables();
+        final Namespace<@NonNull Sort> sorts = services.getNamespaces().sorts();
+        final Namespace<@NonNull IProgramVariable> progVars =
+            services.getNamespaces().programVariables();
 
         fieldSort = sorts.lookup(new Name("Field"));
         select = addSortDependingFunction(services, SELECT_NAME.toString());
@@ -280,17 +282,17 @@ public final class HeapLDT extends LDT {
     }
 
 
-    public JFunction getStore() {
+    public Function getStore() {
         return store;
     }
 
 
-    public JFunction getCreate() {
+    public Function getCreate() {
         return create;
     }
 
 
-    public JFunction getAnon() {
+    public Function getAnon() {
         return anon;
     }
 
@@ -300,63 +302,63 @@ public final class HeapLDT extends LDT {
     }
 
 
-    public JFunction getArr() {
+    public Function getArr() {
         return arr;
     }
 
 
-    public JFunction getCreated() {
+    public Function getCreated() {
         return created;
     }
 
 
-    public JFunction getInitialized() {
+    public Function getInitialized() {
         return initialized;
     }
 
 
-    public JFunction getClassPrepared(Sort instanceSort, TermServices services) {
+    public Function getClassPrepared(Sort instanceSort, TermServices services) {
         return classPrepared.getInstanceFor(instanceSort, services);
     }
 
 
-    public JFunction getClassInitialized(Sort instanceSort, TermServices services) {
+    public Function getClassInitialized(Sort instanceSort, TermServices services) {
         return classInitialized.getInstanceFor(instanceSort, services);
     }
 
 
-    public JFunction getClassInitializationInProgress(Sort instanceSort,
+    public Function getClassInitializationInProgress(Sort instanceSort,
             TermServices services) {
         return classInitializationInProgress.getInstanceFor(instanceSort, services);
     }
 
 
-    public JFunction getClassErroneous(Sort instanceSort, TermServices services) {
+    public Function getClassErroneous(Sort instanceSort, TermServices services) {
         return classErroneous.getInstanceFor(instanceSort, services);
     }
 
 
-    public JFunction getLength() {
+    public Function getLength() {
         return length;
     }
 
 
-    public JFunction getNull() {
+    public Function getNull() {
         return nullFunc;
     }
 
 
-    public JFunction getWellFormed() {
+    public Function getWellFormed() {
         return wellFormed;
     }
 
 
-    public JFunction getAcc() {
+    public Function getAcc() {
         return acc;
     }
 
 
-    public JFunction getReach() {
+    public Function getReach() {
         return reach;
     }
 
@@ -398,12 +400,12 @@ public final class HeapLDT extends LDT {
      * the appropriate symbol does not yet exist in the namespace, this method creates and adds it
      * to the namespace as a side effect.
      */
-    public JFunction getFieldSymbolForPV(LocationVariable fieldPV, Services services) {
+    public Function getFieldSymbolForPV(LocationVariable fieldPV, Services services) {
         assert fieldPV.isMember();
         assert fieldPV != services.getJavaInfo().getArrayLength();
 
         final Name name = new Name(getFieldSymbolName(fieldPV));
-        JFunction result = services.getNamespaces().functions().lookup(name);
+        Function result = services.getNamespaces().functions().lookup(name);
         if (result == null) {
             int index = name.toString().indexOf("::");
             assert index > 0;
@@ -456,35 +458,36 @@ public final class HeapLDT extends LDT {
     }
 
     @Override
-    public boolean isResponsible(de.uka.ilkd.key.java.expression.Operator op, Term[] subs,
+    public boolean isResponsible(de.uka.ilkd.key.java.expression.Operator op, JTerm[] subs,
             Services services, ExecutionContext ec) {
         return false;
     }
 
 
     @Override
-    public boolean isResponsible(de.uka.ilkd.key.java.expression.Operator op, Term left, Term right,
+    public boolean isResponsible(de.uka.ilkd.key.java.expression.Operator op, JTerm left,
+            JTerm right,
             Services services, ExecutionContext ec) {
         return false;
     }
 
 
     @Override
-    public boolean isResponsible(de.uka.ilkd.key.java.expression.Operator op, Term sub,
+    public boolean isResponsible(de.uka.ilkd.key.java.expression.Operator op, JTerm sub,
             TermServices services, ExecutionContext ec) {
         return false;
     }
 
 
     @Override
-    public Term translateLiteral(Literal lit, Services services) {
+    public JTerm translateLiteral(Literal lit, Services services) {
         assert false;
         return null;
     }
 
 
     @Override
-    public JFunction getFunctionFor(de.uka.ilkd.key.java.expression.Operator op, Services serv,
+    public Function getFunctionFor(de.uka.ilkd.key.java.expression.Operator op, Services serv,
             ExecutionContext ec) {
         assert false;
         return null;
@@ -492,27 +495,27 @@ public final class HeapLDT extends LDT {
 
 
     @Override
-    public boolean hasLiteralFunction(JFunction f) {
+    public boolean hasLiteralFunction(Function f) {
         return false;
     }
 
 
     @Override
-    public Expression translateTerm(Term t, ExtList children, Services services) {
+    public Expression translateTerm(JTerm t, ExtList children, Services services) {
         if (t.op() instanceof SortDependingFunction
                 && ((SortDependingFunction) t.op()).isSimilar(select)) {
-            ProgramVariable heap = (ProgramVariable) children.remove(0);
+            ProgramVariable heap = (ProgramVariable) children.removeFirst();
             if (heap != getHeap()) {
                 throw new IllegalArgumentException("Can only translate field access to base heap.");
             }
-            ReferencePrefix prefix = (ReferencePrefix) children.remove(0);
-            ProgramVariable field = (ProgramVariable) children.remove(0);
+            ReferencePrefix prefix = (ReferencePrefix) children.removeFirst();
+            ProgramVariable field = (ProgramVariable) children.removeFirst();
 
             if (prefix instanceof NullLiteral) {
                 return new FieldReference(field, null);
             }
             return new FieldReference(field, prefix);
-        } else if (t.sort() == getFieldSort() && t.op() instanceof JFunction
+        } else if (t.sort() == getFieldSort() && t.op() instanceof Function
                 && ((Function) t.op()).isUnique()) {
             return services.getJavaInfo().getAttribute(getPrettyFieldName(t.op()),
                 getClassName((Function) t.op()));
@@ -523,7 +526,7 @@ public final class HeapLDT extends LDT {
 
 
     @Override
-    public Type getType(Term t) {
+    public Type getType(JTerm t) {
         assert false;
         return null;
     }
